Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109219

[SerialPort] bindable property tests fail

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.2.7, 6.4.3, 6.5.0
    • 6.5.0 FF
    • Serial Port
    • None
    • 2
    • 71791866d (dev), 774e9201b (tqtc/lts-6.2), ee23371b2 (6.4)
    • Foundation Sprint 71

      SerialPort code was ported to using bindable properties, but the actual unit-tests for the bindable properties fail.

      That is not visible in the CI, because the tests do not run without setting special environment variables.

      When running the tests locally (both Linux and Windows), I see:

      FAIL!  : tst_QSerialPort::bindingsAndProperties() Compared values are not the same
         Actual   (dbProp.value())              : Data5
         Expected (QSerialPort::DataBits::Data8): Data8
         Loc: [qt5/qtserialport/tests/auto/qserialport/tst_qserialport.cpp(1285)]

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ivan.solovev Ivan Solovev
            ivan.solovev Ivan Solovev
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes